@@ -68,6 +68,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
 import java.util.Objects;
+import java.util.Optional;
 import java.util.Set;
 import java.util.StringTokenizer;
 import java.util.jar.Attributes;
@@ -382,7 +383,7 @@ public class Capsule implements Runnable, InvocationHandler {
 
     /**
      * Alternative main entry point that is not using System.exit(), thus avoiding callers to be terminated
-     * in an unexpected way. 
+     * in an unexpected way.
      *
      * @param args0 the command line arguments
      * @return the exit code
@@ -1274,10 +1275,10 @@ public class Capsule implements Runnable, InvocationHandler {
             }
         }
     }
-    
+
     void introspect(List<String> args) {
         STDERR.println("Capsule " + VERSION);
-        
+
         final List<Class<? extends Capsule>> caplets = getCaplets();
         STDERR.println("Caplets: ");
         if (caplets.isEmpty())
@@ -1291,9 +1292,9 @@ public class Capsule implements Runnable, InvocationHandler {
                 STDERR.println("  " + sb);
             }
         }
-        
+
         STDERR.println();
-        
+
         STDERR.println("Attributes");
         for (Map.Entry<String, Object[]> entry : ATTRIBS.entrySet()) {
             final String attrib = entry.getKey();
@@ -1303,7 +1304,7 @@ public class Capsule implements Runnable, InvocationHandler {
             if (entry.getValue()[ATTRIB_DESC] != null)
                 sb.append(" (").append(entry.getValue()[ATTRIB_DESC]).append(')');
             sb.append(": ");
-            
+
             sb.append("\n\t");
             final Entry<String, ?> attr = attr(attrib);
             final Object value = getAttributeNoLookup(attr);
@@ -2176,10 +2177,13 @@ public class Capsule implements Runnable, InvocationHandler {
         Path extractedFile = dir.resolve(TIMESTAMP_FILE_NAME);
         if (!Files.exists(extractedFile))
             return false;
+        Optional<String> extractedTimeOptional = Files.readAllLines(extractedFile).stream().findFirst();
+        if (!extractedTimeOptional.isPresent())
+            return false;
+        final FileTime extractedTime = FileTime.fromMillis(Long.decode(extractedTimeOptional.get()));
         final FileTime jarTime = Files.getLastModifiedTime(getJarFile());
-        final FileTime extractedTime = Files.getLastModifiedTime(extractedFile);
-        final boolean fresh = extractedTime.compareTo(jarTime) >= 0;
-        log(LOG_DEBUG, "JAR timestamp: " + jarTime + " Cache timestamp: " + extractedTime + " (" + (fresh ? "fresh" : "stale") + ")");
+        final boolean fresh = extractedTime.compareTo(jarTime) != 0;
+        log(LOG_VERBOSE, "JAR timestamp: " + jarTime + " Cache timestamp: " + extractedTime + " (" + (fresh ? "fresh" : "stale") + ")");
         return fresh;
     }
 
@@ -2210,7 +2214,12 @@ public class Capsule implements Runnable, InvocationHandler {
         if (!oc.plainCache || oc.appDir == null || oc.cacheUpToDate)
             return;
         if (Files.isWritable(oc.appDir))
-            Files.createFile(oc.appDir.resolve(TIMESTAMP_FILE_NAME));
+        {
+            Path timestampFile = oc.appDir.resolve(TIMESTAMP_FILE_NAME);
+            Files.createFile(timestampFile);
+            long jarTime = Files.getLastModifiedTime(getJarFile()).toMillis();
+            Files.write(timestampFile, Collections.singleton(String.valueOf(jarTime)));
+        }
     }
 
     private void lockAppCache(Path dir) throws IOException {
@@ -2536,14 +2545,47 @@ public class Capsule implements Runnable, InvocationHandler {
         for (String a : getAttribute(ATTR_JVM_ARGS)) {
             a = a.trim();
             if (!a.isEmpty() && !a.startsWith("-Xbootclasspath:") && !a.startsWith("-javaagent:"))
-                addJvmArg(toNativePath(expand(a)), jvmArgs);
+                a = expand(a);
+                if (!addJava9ModulesJvmArg(a, jvmArgs)) {
+                    a = toNativePath(a);
+                    jvmArgs.put(getJvmArgKey(a), a);
+                }
         }
 
         return new ArrayList<String>(jvmArgs.values());
     }
 
-    private static void addJvmArg(String a, Map<String, String> args) {
-        args.put(getJvmArgKey(a), a);
+    private void addJvmArg(String a, Map<String, String> args) {
+        if (!addJava9ModulesJvmArg(a, args))
+            args.put(getJvmArgKey(a), a);
+    }
+
+    private static final Pattern JAVA_9_MODULES_ARGS_REGEX = Pattern.compile("--add-((modules)|(opens)|(exports)|(reads))(=(.*))?");
+    private String firstPartJava9ModulesArg = null;
+    /**
+     * Handle Java 9 Modules options with formats "--add-opens=java.base/java.lang=ALL-UNNAMED"
+     * or "--add-opens java.base/java.lang=ALL-UNNAMED". In this last case it will be 2 arguments
+     * to recombine.
+     * @return true if the argument is for Java 9 modules (for options that begin with "--add-")
+     */
+    private boolean addJava9ModulesJvmArg(String arg, Map<String, String> args)
+    {
+        Matcher matcher = JAVA_9_MODULES_ARGS_REGEX.matcher(arg);
+        if (matcher.matches()) {
+            boolean oneArgWithModuleAndPackage = matcher.group(7) != null;
+            if (oneArgWithModuleAndPackage)
+                args.put(arg, arg);
+            else
+                firstPartJava9ModulesArg = arg;
+            return true;
+        }
+        if (firstPartJava9ModulesArg != null) {
+            String fullArg = firstPartJava9ModulesArg + "=" + arg;
+            args.put(fullArg, fullArg);
+            firstPartJava9ModulesArg = null;
+            return true;
+        }
+        return false;
     }
 
     private static String getJvmArgKey(String a) {
@@ -2818,7 +2860,7 @@ public class Capsule implements Runnable, InvocationHandler {
             throw new RuntimeException("Exception while getting attribute " + name(attr), e);
         }
     }
-    
+
     protected final <T> T getAttributeDefaultValue(Entry<String, T> attr) {
         final Object[] conf = ATTRIBS.get(name(attr));
         final T type = type(attr);
@@ -3462,7 +3504,7 @@ public class Capsule implements Runnable, InvocationHandler {
         if (res == null)
             throw new RuntimeException("Could not resolve " + x);
         if (res.isEmpty())
-            log(LOG_VERBOSE, "WARNING resolve " + x + " was empty");
+            log(LOG_VERBOSE, "resolve " + x + " was empty");
         return res;
     }
 
@@ -4589,11 +4631,11 @@ public class Capsule implements Runnable, InvocationHandler {
         final int NORMAL = 0,
                 IN_QUOTE = 1,
                 IN_DOUBLE_QUOTE = 2;
-        
+
         final StringTokenizer tok = new StringTokenizer(str, "\"\'\\ ", true);
         final ArrayList<String> result = new ArrayList<>();
         final StringBuilder current = new StringBuilder();
-        
+
         int state = NORMAL;
         boolean lastTokenHasBeenQuoted = false;
         while (tok.hasMoreTokens()) {
@@ -5557,10 +5599,10 @@ public class Capsule implements Runnable, InvocationHandler {
     private void overridePlatformMBeanServer() {
         try {
             MBeanServer platformMBeanServer = ManagementFactory.getPlatformMBeanServer();
-            
+
             if (platformMBeanServer instanceof com.sun.jmx.mbeanserver.JmxMBeanServer) {
                 final MBeanServer interceptor = (MBeanServer) Proxy.newProxyInstance(MY_CLASSLOADER, new Class<?>[]{MBeanServer.class}, this);
-                
+
                 Field interceptorField = accessible(com.sun.jmx.mbeanserver.JmxMBeanServer.class.getDeclaredField("mbsInterceptor"));
 //                this.origMBeanServer = ((com.sun.jmx.mbeanserver.JmxMBeanServer) platformMBeanServer).getMBeanServerInterceptor();
                 this.origMBeanServer = (MBeanServer) interceptorField.get(platformMBeanServer);
@@ -5779,7 +5821,7 @@ public class Capsule implements Runnable, InvocationHandler {
             cls = cls.getSuperclass();
         return getClassVersion(cls);
     }
-    
+
     private static String getClassVersion(Class<?> cls) {
         if (cls == null)
             return null;
